--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.26",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
+    "styled-components": "^6.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -23,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build" 
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +48,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://eee0930.github.io/cat_album/"
+  "homepage": "https://eee0930.github.io/cat_album/",
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.6"
+  }
 }
